<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#090909"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_park_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#0E0E0E" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_text"
                android:textColor="#101010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/activities_text"
                android:textColor="#070707"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/details_activities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#0B0B0B" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/topic_text"
                android:textColor="#0C0C0C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#070707" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/entrance_fees"
                android:textColor="#100F0F"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_enterancefees"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#0C0C0C" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/operating_hours"
                android:textColor="#040303"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_operatinghours"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#0B0A0A" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dirction_Text"
                android:textColor="#050505"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#050505" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>